fix base dir public

--- a/amplify.yml
+++ b/amplify.yml
@@ -15,7 +15,7 @@ frontend:
         - hugo version
         - hugo
   artifacts:
-    baseDirectory: /public/
+    baseDirectory: /src/public/
     files:
       - '**/*'
   cache:
